--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,8 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
+      - uses: oven-sh/setup-bun@v2
+
       - name: Install dependencies
         run: npm ci
 
