--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,6 +24,8 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
           cache: 'npm'
 
+      - uses: oven-sh/setup-bun@v2
+
       - name: Install dependencies
         run: npm ci
 
