--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "workspaces": ["packages/*"],
   "scripts": {
-    "build": "npm run build --workspaces",
+    "build": "npm run build --workspace=packages/core && npm run build --workspace=packages/opencode-usage-limits-router",
     "clean": "npm run clean --workspaces",
     "watch": "npm run watch --workspace=packages/core"
   },
