feat: add autoDetectAuthTokens option to core library
Move auth token detection from opencode-router into core so users can
auto-detect tokens without importing the OpenCode-specific package.

- Add packages/core/src/utils/auth.ts with cross-platform auth detection
- Add autoDetectAuthTokens option to UsageOptions
- Update getUsage() to merge auto-detected tokens with explicit tokens
- Re-export auth utilities from opencode-router
- Rewrite README to focus on value prop and clear examples
- Move OpenCode-specific docs/testing to opencode-router package
- Clean up root directory (remove config.json, IMPLEMENTATION_SUMMARY, etc)

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,10 +1,13 @@
 {
   "name": "@bytespell/model-provider-usage-limits",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Fetch AI provider usage limits, pace tracking, and smart routing.",
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "bin": {
+    "usage-limits": "./dist/cli.js"
+  },
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
