--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -51,5 +51,9 @@
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "dependencies": {
+    "@clack/prompts": "^0.11.0",
+    "picocolors": "^1.1.1"
   }
 }
